--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ num-traits = "0.2.14"
 ndarray = "0.15.2"
 approx = "0.4.0"
 csv = "1.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
