--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ approx = "0.4.0"
 csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = { version = "3.0.0-beta.2", features = ["yaml"] }
